# NGSDiffGeo

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  install.html  license.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
docs/: Makefile  conf.py  covariant_derivatives.ipynb  index.rst  install.rst  make.bat  requirements.txt  riemannian_manifolds.ipynb
src/: __init__.py  coefficient_grad.cpp  coefficient_grad.hpp  kforms.cpp  kforms.hpp  manifolds.py  ngsdiffgeo.cpp  riemannian_manifold.cpp  riemannian_manifold.hpp  tensor_fields.cpp  tensor_fields.hpp  utils.py  wrappers.py
tests/: README.md  __init__.py  _helpers.py  _kforms_support.py  conftest.py  test_cov_derivatives2D.py  test_double_form_projection.py  test_ext_cov_der.py  test_hodge_star.py  test_hodge_star_delta.py  test_kforms.py  test_ngsdiffgeo.py  test_riemannian_manifold.py  test_star_delta.py  test_tensor_fields.py  test_wrappers_dispatch.py  test_wrappers_doubleform_mixing_behavior.py  test_wrappers_formal_zero.py  test_wrappers_hodge_star_delta.py  test_wrappers_kforms_construction.py  test_wrappers_kforms_hodge_projection.py  test_wrappers_kforms_trace_inner.py  test_wrappers_kforms_wedge.py  test_wrappers_riemannian_manifold_core.py  test_wrappers_riemannian_manifold_covariant_doubleforms.py  test_wrappers_riemannian_manifold_covariant_ops.py  test_wrappers_riemannian_manifold_projection.py  test_wrappers_tensor_fields.py
tutorials/: covariant_derivatives.html  covariant_derivatives.ipynb  curvatures.html  curvatures.ipynb  distributional_einstein_tensor.html  distributional_einstein_tensor.ipynb  distributional_gauss_curvature.html  distributional_gauss_curvature.ipynb  distributional_gauss_curvature_analysis.html  distributional_gauss_curvature_analysis.ipynb  distributional_gauss_curvature_surface.html  distributional_gauss_curvature_surface.ipynb  distributional_riemann_curvature_tensor.html  distributional_riemann_curvature_tensor.ipynb  distributional_scalar_curvature.html  (+13 more)
(+36 files in other folders)
