# Here is the project metadata, adapt it to your needs
[project]
name = "ngsdiffgeo"
version = "0.0.1.dev5"
authors = [{name="Michael Neunteufel"}]
description = "Differential geometry tools for NGSolve"
urls = {github="https://github.com/MichaelNeunteufel/NGSDiffGeo"}
readme = "README.md"
requires-python = ">=3.9"
# dependencies = [] # ngsolve will be added automatically
# dynamic = ["dependencies"]
dynamic = ["dependencies"]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

# Update NGSolve when you rely on newer features, but keep the '>=' to allow also newer versions
# Maybe you also need to add other requirements to build your package
[build-system]
requires = [
            "ngsolve>=6.2.2502",
            "scikit-build-core>=0.9.0",
            "pybind11_stubgen",
            "cmake",
            "toml;  python_version >= '3.11'",
            "tomli>=1.1.0; python_version < '3.11'",
            "numpy"
]
build-backend = "scikit_build_core.build"

##########################################################################
# Settings for cibuildwheel to build .whl files for Windows/Mac/Linxu
# DO NOT CHANGE THIS UNLESS YOU KNOW WHAT YOU ARE DOING
##########################################################################

[tool.scikit-build]
experimental = true
# This adds ngsolve (with exact build-time version) to the dependencies
metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
skip = """
  pp*
  *_i686
  *musllinux*
  *win32
"""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir} && rename linux_x86_64 manylinux_2_28_x86_64.manylinux2014_x86_64 {dest_dir}/*-linux_x86_64*.whl"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}
repair-wheel-command = ""
archs = ["universal2"]
